# ImmichEmbeddedFrame

./: .gitignore  README.md  epd7in3e.py  example.py  immich.py  main.py  photo.py  pyproject.toml  spotipytest.py
config/: config_handler.py  example_config.yaml
daemon/: main.py
display/: base_display_manager.py  display_manager.py  get_display_manager.py
display/drivers/: epd7in3e.py  epdconfig.py
display/emulators/: virtual_epd7in3e.py
display/wrappers/: epd7in3e_wrapper.py
image_fetcher/: base_search_handler.py  image_fetcher.py  immich.py  mock_image_fetcher.py
image_fetcher.py/: photo_handler.py
image_fetcher/search_handlers/: album_search_handler.py
photo_processing/: ConvertTo6Color.py  ImageProcessor.py
utils/: logging_setup.py
